crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@augment_idol.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/augment_idol.txt
---
Item {
    item_class: "Augment",
    rarity: Currency,
    name: Some(
        "Idol of Ralakesh",
    ),
    base_type: Some(
        "Idol",
    ),
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: Some(
            50,
        ),
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: Some(
        StackSize {
            count: 3,
            max: 10,
        },
    ),
    properties: [
        Property {
            name: "Limited to",
            value: "1",
        },
        Property {
            name: "Helmets",
            value: "8% increased Reservation Efficiency of Minion Skills",
        },
        Property {
            name: "Sceptres",
            value: "40% increased Armour, Evasion and Energy Shield while your Companion is in your Presence",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
