crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@currency_distilled.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/currency_distilled.txt
---
Item {
    item_class: "Stackable Currency",
    rarity: Currency,
    name: Some(
        "Liquid Envy",
    ),
    base_type: None,
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: Some(
        StackSize {
            count: 8,
            max: 10,
        },
    ),
    properties: [
        Property {
            name: "Sapphire",
            value: "(5-15)% increased Spell Damage",
        },
        Property {
            name: "Ruby",
            value: "(4-6)% of Skill Mana Costs Converted to Life Costs",
        },
        Property {
            name: "Emerald",
            value: "(3-5)% increased Cooldown Recovery Rate",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    description: [
        "Removes a random modifer and Augments a Rare Basic Jewel with a",
        "new guaranteed Crafted modifier",
        "Can be used at The Withered Willow to Instil Amulets with a Notable Passive Skill.",
        "Right click this item then left click a Rare Jewel to apply it.",
        "Shift click to unstack.",
    ],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
