crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@currency_essence.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/currency_essence.txt
---
Item {
    item_class: "Stackable Currency",
    rarity: Currency,
    name: Some(
        "Perfect Essence of Sorcery",
    ),
    base_type: None,
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: Some(
        StackSize {
            count: 13,
            max: 10,
        },
    ),
    properties: [
        Property {
            name: "Wand",
            value: "+3 to Level of all Spell Skills",
        },
        Property {
            name: "Staff",
            value: "+5 to Level of all Spell Skills",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    description: [
        "Removes a random modifier and augments a Rare item with a new guaranteed modifier",
        "Right click this item then left click a Rare item to apply it.",
        "Shift click to unstack.",
    ],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
