crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@currency_omen.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/currency_omen.txt
---
Item {
    item_class: "Omen",
    rarity: Currency,
    name: Some(
        "Omen of Gambling",
    ),
    base_type: None,
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: Some(
        StackSize {
            count: 2,
            max: 10,
        },
    ),
    properties: [],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    description: [
        "While this item is active in your inventory your next",
        "Gamble purchase will have a 50% chance of costing no Gold",
        "and not consuming this Omen",
        "Right click this item in your inventory to set it to be active. This item is consumed when triggered.",
        "Shift click to unstack.",
    ],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
