crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@currency_verisium.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/currency_verisium.txt
---
Item {
    item_class: "Stackable Currency",
    rarity: Currency,
    name: Some(
        "Verisium",
    ),
    base_type: None,
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: Some(
        StackSize {
            count: 41941,
            max: 1000,
        },
    ),
    properties: [],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    description: [
        "Can be used at the Verisium Anvil to transform Equipment.",
        "Shift click to unstack.",
    ],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
